[metadata]
author = Ivan Smirnov
author-email = ivsmir@gmail.com
maintainer = Ivan Smirnov
maintainer_email = ivsmir@gmail.com
home-page = https://github.com/IvanVSmirnov/zfs-wrapper
description = Python binding for ZFS on Linux
long-description = file: README.rst
license = Free for non-commercial use
license_file = LICENSE.txt
keywords =
    ZFS
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: Free for non-commercial use
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = >=3.8, <4
install_requires =
    pybind == 2.5.0
