[metadata]
author = Ivan Smirnov
author-email = ivsmir@gmail.com
maintainer = Ivan Smirnov
maintainer_email = ivsmir@gmail.com
home-page = https://github.com/IvanVSmirnov/pyzol
description = Python binding for ZFS on Linux
long-description = file: README.rst
license_file = LICENSE.txt
keywords =
    ZFS
    ZFS on Linux
    python binding
    python wrapper
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
python_requires = >=3.6
setup_requires =
    pybind11 == 2.5.0
